force-app/main/default/objects/Guest_Detail__c/Guest_Detail__c.object-meta.xml
<CustomObject>
    <label>Guest Detail</label>
    <nameField>
        <label>Guest Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Guest Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>