force-app/main/default/objects/Guest_Detail__c/fields/Guest_CheckIn__c.field-meta.xml
<CustomField>
    <fullName>Guest_CheckIn__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Guest CheckIn</label>
    <referenceTo>Guest_CheckIn__c</referenceTo>
    <relationshipLabel>Guest CheckIn</relationshipLabel>
    <relationshipName>Guest_Details</relationshipName>
    <type>Lookup</type>
</CustomField>