force-app/main/default/objects/Guest_Detail__c/fields/Passport_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Passport_Document_Id__c</fullName>
    <label>Passport Document Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>